tests/ui/share-trait/share-trait-requires-clone.stderr
error[E0277]: the trait bound `NotClone: Clone` is not satisfied
  --> $DIR/share-trait-requires-clone.rs:7:16
   |
LL | impl Share for NotClone {}
   |                ^^^^^^^^ the trait `Clone` is not implemented for `NotClone`
   |
note: required by a bound in `Share`
  --> $SRC_DIR/core/src/clone.rs:LL:COL
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NotClone;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
